[package]
name = "hermes-agent-acp-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hab"
path = "src/main.rs"

[dependencies]
agent-client-protocol = "0.10"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
